// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. gradient with no angle 1`] = `
<View>
  <ARTSurfaceView>
    <ARTShape
      fill={
        Array [
          1,
          0,
          0,
          -0,
          0,
          0.9764705882352941,
          0.9764705882352941,
          0.9764705882352941,
          1,
          0.9294117647058824,
          0.9294117647058824,
          0.9294117647058824,
          1,
          0,
          1,
        ]
      }
    />
  </ARTSurfaceView>
</View>
`;

exports[`2. gradient with an angle (-45) 1`] = `
<View>
  <ARTSurfaceView>
    <ARTShape
      fill={
        Array [
          1,
          0,
          0,
          -0,
          0,
          0.9764705882352941,
          0.9764705882352941,
          0.9764705882352941,
          1,
          0.9294117647058824,
          0.9294117647058824,
          0.9294117647058824,
          1,
          0,
          1,
        ]
      }
    />
  </ARTSurfaceView>
</View>
`;

exports[`3. gradient with an angle (45) 1`] = `
<View>
  <ARTSurfaceView>
    <ARTShape
      fill={
        Array [
          1,
          0,
          0,
          0,
          -0,
          0.9764705882352941,
          0.9764705882352941,
          0.9764705882352941,
          1,
          0.9294117647058824,
          0.9294117647058824,
          0.9294117647058824,
          1,
          0,
          1,
        ]
      }
    />
  </ARTSurfaceView>
</View>
`;

exports[`4. gradient with an angle (90) 1`] = `
<View>
  <ARTSurfaceView>
    <ARTShape
      fill={
        Array [
          1,
          0,
          0,
          0,
          0,
          0.9764705882352941,
          0.9764705882352941,
          0.9764705882352941,
          1,
          0.9294117647058824,
          0.9294117647058824,
          0.9294117647058824,
          1,
          0,
          1,
        ]
      }
    />
  </ARTSurfaceView>
</View>
`;

exports[`5. gradient with an angle (180) 1`] = `
<View>
  <ARTSurfaceView>
    <ARTShape
      fill={
        Array [
          1,
          0,
          0,
          0,
          0,
          0.9764705882352941,
          0.9764705882352941,
          0.9764705882352941,
          1,
          0.9294117647058824,
          0.9294117647058824,
          0.9294117647058824,
          1,
          0,
          1,
        ]
      }
    />
  </ARTSurfaceView>
</View>
`;

exports[`6. gradient with an angle (270) 1`] = `
<View>
  <ARTSurfaceView>
    <ARTShape
      fill={
        Array [
          1,
          0,
          0,
          0,
          0,
          0.9764705882352941,
          0.9764705882352941,
          0.9764705882352941,
          1,
          0.9294117647058824,
          0.9294117647058824,
          0.9294117647058824,
          1,
          0,
          1,
        ]
      }
    />
  </ARTSurfaceView>
</View>
`;

exports[`7. gradient with custom colours 1`] = `
<View>
  <ARTSurfaceView>
    <ARTShape
      fill={
        Array [
          1,
          0,
          0,
          -0,
          0,
          1,
          0,
          0,
          1,
          0,
          1,
          1,
          1,
          0,
          1,
        ]
      }
    />
  </ARTSurfaceView>
</View>
`;

exports[`8. gradient with custom points 1`] = `
<View>
  <ARTSurfaceView>
    <ARTShape
      fill={
        Array [
          1,
          0,
          0,
          -0,
          0,
          0.9294117647058824,
          0.9294117647058824,
          0.9294117647058824,
          1,
          0.9764705882352941,
          0.9764705882352941,
          0.9764705882352941,
          1,
          0.8,
          0.2,
        ]
      }
    />
  </ARTSurfaceView>
</View>
`;
